--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <a class="link-btn" href="https://www.instagram.com/asomodelfabrika/" target="_blank">Instagram</a>
         <a class="link-btn" href="https://www.modelfabrika.org/" target="_blank">Web Sitesi</a>
         <a class="link-btn" href="https://www.linkedin.com/company/69687492/admin/dashboard/" target="_blank">LinkedIn</a>
+        <a class="link-btn" href="https://www.modelfabrika.org/contact/" target="_blank">İletişim</a>
     </div>
 </body>
 </html>
